# trading-quant-web

./: .gitignore  README.md  docker-compose.yml
api-gateway/: .pre-commit-config.yaml  README.md
api-gateway/app/: main.py
api-gateway/app/core/: config.py  db.py
api-gateway/app/models/: base.py
api-gateway/app/schemas/: asset.py
api-gateway/app/services/: order_service.py
backend/: .pre-commit-config.yaml  pyproject.toml
backend/app/api/v1/: order.py  strategy.py
backend/app/models/: __init__.py
backend/app/schemas/: exchange.py  order.py  strategy.py
backend/app/services/: asset_service.py  ccxt_service.py  exchange_service.py  strategy_service.py
backend/app/strategies/: base.py
docs/: DEVELOPMENT.md  MVP_REQUIREMENTS.md  Todo-v2.md  requirements_v2.md
docs/datahub/: README.md  backfill-api.md  deployment.md  health-api.md  implementation_plan.md  jobs-api.md  ledger-api.md  logs-api.md  market-api.md  requirement_v1.md  requirements.md  symbol-api.md  tech_v1.md
docs/demo/: dashboard.html
docs/oms/: api-reference.md  app-requirements.md
docs/plan/: feature-checklist.md  platform-requirements.md
docs/plan/ui/: menu-structure.md
docs/ui-design/: crypto-quant-discard.pen  crypto-quant.pen  dashboard..excalidraw
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/api/: order.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: Dashboard.tsx  ManualTrade.tsx
frontend/src/utils/: request.ts
web-gui/src/: index.css
web-gui/src/api/: asset.ts  exchange.ts  strategy.ts
(+6 files in other folders)
